--- a/index.html
+++ b/index.html
@@ -19,30 +19,94 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="microservices-demo" class="anchor" href="#microservices-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>microservices-demo</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>A very simple Go-Redis app to demo discovery of multiple services behind a haproxy load balanced (using the interlock plugin system).</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This demo uses Docker Swarm, docker-compose and HA Proxy as the load balancer service through the interlock plugin system. If you need a simpler demo that does not use docker-compose, try <a href="http://anokun7.github.io/interlock-demo/">the interlock-demo</a>.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="pre-requisites" class="anchor" href="#pre-requisites" aria-hidden="true"><span class="octicon octicon-link"></span></a>Pre-requisites</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ol>
+<li>Ensure Docker Swarm is working. An effective demo would require at least 3 active nodes in the swarm.</li>
+<li>Docker version &gt; 1.8</li>
+<li>Set the <code>DOCKER_HOST</code> environment variable to the Docker Swarm's tcp endpoint. Do not use localhost, even if you are on the Docker Swarm manager / master. Example: <code>export DOCKER_HOST=tcp://10.0.0.6:9999</code>.</li>
+<li>
+<code>docker info</code> should show the nodes added to the cluster.</li>
+</ol>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="steps" class="anchor" href="#steps" aria-hidden="true"><span class="octicon octicon-link"></span></a>Steps</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ol>
+<li>On any node that is part of the cluster, run a container from the ehazlett/interlock image using the command below. We want to use the haproxy plugin for this lab.
+<code>
+docker run -p 80:80 --name lb0 -d ehazlett/interlock --swarm-url $DOCKER_HOST --plugin haproxy start
+</code>
+</li>
+<li>Due to the cluster scheduling, the haproxy container may actually be running on a different host than the one where the above command was run. Use <code>docker ps | grep lb0</code> to identify the host it is running on.
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ul>
+<li>Alternatively, specify a filter (ie., affinity:nodename or constraint:container) to restrict the container to a specific docker host.</li>
+</ul>
+</li>
+<li>Clone this repo to a local folder. <code>git clone https://github.com/anokun7/microservices-demo.git</code>
+</li>
+<li><code>cd microservices-demo</code></li>
+<li>
+<p>Use docker-compose to build and run the web app containers. <code>docker-compose up -d</code></p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<pre><code>vagrant@ubuntu5:/vagrant/microservices-demo$ docker-compose up -d 
+Creating microservicesdemo_dbdata_1...
+Creating microservicesdemo_db_1...
+Creating microservicesdemo_web_1...
+</code></pre>
+</li>
+<li>Every container started in a swarm cluster gets registered to the ha-proxy as a backend as long as the container has an exposed port and a hostname.
+
+<ul>
+<li>The hostname for the <code>web</code> container is configured in the <code>docker-compose.yml</code> using the <code>INTERLOCK_DATA</code> environment variable.</li>
+</ul>
+</li>
+<li>
+<p>Let's again use docker-compose to scale up the number of web containers to 9. Each of these 9 web containers will also get registered to the same backend in the HA Proxy config.</p>
+
+<pre><code>vagrant@ubuntu5:/vagrant/microservices-demo$ docker-compose scale web=9
+Creating microservicesdemo_web_2...
+Creating microservicesdemo_web_3...
+Creating microservicesdemo_web_4...
+Creating microservicesdemo_web_5...
+Creating microservicesdemo_web_6...
+Creating microservicesdemo_web_7...
+Creating microservicesdemo_web_8...
+Creating microservicesdemo_web_9...
+Starting microservicesdemo_web_2...
+Starting microservicesdemo_web_3...
+Starting microservicesdemo_web_4...
+Starting microservicesdemo_web_5...
+Starting microservicesdemo_web_6...
+Starting microservicesdemo_web_7...
+Starting microservicesdemo_web_8...
+Starting microservicesdemo_web_9...
+</code></pre>
+
+<ul>
+<li>Tha HA Proxy stats page should (auto) refresh to show the newly registered backends, like below:
+<img src="https://farm1.staticflickr.com/651/21717537885_0c6a3ec632_b.jpg" alt="HA Proxy stats">
+</li>
+</ul>
+</li>
+<li>Ensure DNS is setup (or add entries to <code>/etc/hosts</code> file) to resolve the host where the <code>lb0</code> container is running.</li>
+<li>Browse to the URL: <code>http://[host-ip-running-lb0]/demo</code>
+
+<ul>
+<li><img src="https://farm1.staticflickr.com/666/21705956952_9b3bfea89f_b.jpg" width="300"></li>
+</ul>
+</li>
+<li>Every time a container responds to the HTTP request, it should get its counter incremented. The counter is being stored (and retrieved) from a REDIS backend database.</li>
+</ol>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/anokun7/microservices-demo">Microservices-demo with Docker Swarm and HA Proxy (Interlock)</a> is maintained by <a href="https://github.com/anokun7">anokun7</a>.</span>
