Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <ol>
 <li>Ensure Docker Swarm is working. An effective demo would require at least 3 active nodes in the swarm.</li>
-<li>Docker version &gt; 1.8</li>
+<li>Docker version &gt; 1.8, docker-compose version &gt; 1.3.1, and Swarm version &gt; 0.4</li>
 <li>Set the <code>DOCKER_HOST</code> environment variable to the Docker Swarm's tcp endpoint. Do not use localhost, even if you are on the Docker Swarm manager / master. Example: <code>export DOCKER_HOST=tcp://10.0.0.6:9999</code>.</li>
 <li>
 <code>docker info</code> should show the nodes added to the cluster.</li>
@@ -41,25 +41,22 @@
 <a id="steps" class="anchor" href="#steps" aria-hidden="true"><span class="octicon octicon-link"></span></a>Steps</h3>
 
 <ol>
-<li>On any node that is part of the cluster, run a container from the ehazlett/interlock image using the command below. We want to use the haproxy plugin for this lab.
-<code>
-docker run -p 80:80 --name lb0 -d ehazlett/interlock --swarm-url $DOCKER_HOST --plugin haproxy start
-</code>
-</li>
-<li>Due to the cluster scheduling, the haproxy container may actually be running on a different host than the one where the above command was run. Use <code>docker ps | grep lb0</code> to identify the host it is running on.
-
-<ul>
-<li>Alternatively, specify a filter (ie., affinity:nodename or constraint:container) to restrict the container to a specific docker host.</li>
-</ul>
-</li>
 <li>Clone this repo to a local folder. <code>git clone https://github.com/anokun7/microservices-demo.git</code>
 </li>
 <li><code>cd microservices-demo</code></li>
 <li>
 <p>Use docker-compose to build and run the web app containers. <code>docker-compose up -d</code></p>
 
-<pre><code>vagrant@ubuntu5:/vagrant/microservices-demo$ docker-compose up -d 
+<pre><code>vagrant@ubuntu5:~/microservices-demo$ docker-compose stop ; docker-compose rm -f ; docker-compose up -d
+Stopping microservicesdemo_db_1... done
+Stopping microservicesdemo_lb_1... done
+Stopping microservicesdemo_dbdata_1... done
+Going to remove microservicesdemo_db_1, microservicesdemo_lb_1, microservicesdemo_dbdata_1
+Removing microservicesdemo_db_1... done
+Removing microservicesdemo_lb_1... done
+Removing microservicesdemo_dbdata_1... done
 Creating microservicesdemo_dbdata_1...
+Creating microservicesdemo_lb_1...
 Creating microservicesdemo_db_1...
 Creating microservicesdemo_web_1...
 </code></pre>
@@ -71,32 +68,31 @@ Creating microservicesdemo_web_1...
 </ul>
 </li>
 <li>
-<p>Let's again use docker-compose to scale up the number of web containers to 9. Each of these 9 web containers will also get registered to the same backend in the HA Proxy config.</p>
+<p>Let's again use docker-compose to scale up the number of web containers to 10. Each of these 10 web containers will also get registered to the same backend in the HA Proxy config.</p>
 
-<pre><code>vagrant@ubuntu5:/vagrant/microservices-demo$ docker-compose scale web=9
-Creating microservicesdemo_web_2...
-Creating microservicesdemo_web_3...
-Creating microservicesdemo_web_4...
-Creating microservicesdemo_web_5...
-Creating microservicesdemo_web_6...
-Creating microservicesdemo_web_7...
-Creating microservicesdemo_web_8...
-Creating microservicesdemo_web_9...
-Starting microservicesdemo_web_2...
-Starting microservicesdemo_web_3...
-Starting microservicesdemo_web_4...
-Starting microservicesdemo_web_5...
-Starting microservicesdemo_web_6...
-Starting microservicesdemo_web_7...
-Starting microservicesdemo_web_8...
-Starting microservicesdemo_web_9...
+<pre><code>vagrant@ubuntu5:~/microservices-demo$ docker-compose scale web=10
+Creating and starting 2... done
+Creating and starting 3... done
+Creating and starting 4... done
+Creating and starting 5... done
+Creating and starting 6... done
+Creating and starting 7... done
+Creating and starting 8... done
+Creating and starting 9... done
+Creating and starting 10... done
 </code></pre>
+</li>
+<li>Tha HA Proxy stats page should (auto) refresh to show the newly registered backends, like below:
 
 <ul>
-<li>Tha HA Proxy stats page should (auto) refresh to show the newly registered backends, like below:
-<img src="https://farm1.staticflickr.com/651/21717537885_0c6a3ec632_b.jpg" alt="HA Proxy stats">
-</li>
+<li>It may be necessary to restart the lb (load balancer) container running HA Proxy. Do this if you do not see any backends registering after the scale up action.</li>
 </ul>
+
+<pre><code>vagrant@ubuntu5:~/microservices-demo$ docker-compose restart lb
+Restarting microservicesdemo_lb_1...
+</code></pre>
+
+<p><img src="https://farm1.staticflickr.com/651/21717537885_0c6a3ec632_b.jpg" alt="HA Proxy stats"></p>
 </li>
 <li>Ensure DNS is setup (or add entries to <code>/etc/hosts</code> file) to resolve the host where the <code>lb0</code> container is running.</li>
 <li>Browse to the URL: <code>http://[host-ip-running-lb0]/demo</code>
@@ -105,7 +101,8 @@ Starting microservicesdemo_web_9...
 <li><img src="https://farm1.staticflickr.com/666/21705956952_9b3bfea89f_b.jpg" width="300"></li>
 </ul>
 </li>
-<li>Every time a container responds to the HTTP request, it should get its counter incremented. The counter is being stored (and retrieved) from a REDIS backend database.</li>
+<li>Every time a container responds to the HTTP request, it will get its counter incremented (on a browser refresh). The counter is being stored (and retrieved) from a REDIS backend database.</li>
+<li>Using docker-compose, you can scale up or down the web containers as you wish based on the needs and traffic to your application.</li>
 </ol>
 
       <footer class="site-footer">
